gateway-envoy/templates/gatewayclass.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: envoy-gatewayclass
spec:
  controllerName: "gateway.envoyproxy.io/gatewayclass-controller"
  parametersRef:
    group: gateway.envoyproxy.io
    kind: EnvoyProxy
    name: envoy-config
    namespace: gateway-envoy
