gateway-envoy/templates/gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: envoy-gateway
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-gateway
spec:
  gatewayClassName: envoy-gatewayclass
  listeners:
    - name: http-listener
      port: 80
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: All
    - name: argocd-listener
      port: 443
      protocol: HTTPS
      hostname: "argocd.dvoc24.v3nc.org"
      allowedRoutes:
        namespaces:
          from: argocd
    - name: pacman-listener
      port: 443
      protocol: HTTPS
      hostname: "pacman.dvoc24.v3nc.org"
      allowedRoutes:
        namespaces:
          from: pacman
      tls:
        certificateRefs:
        - kind: Secret
          group: ""
          name: wildcard-dvoc24-v3nc-org-nginx
        mode: Terminate
